# easyversion_py

./: .gitignore  README.md  pyproject.toml
docs/: DEVELOPERS.md  USERS.md
src/easyversion/: __init__.py
src/easyversion/file/: __init__.py  store.py
src/easyversion/project/: __init__.py  version.py  workspace.py
src/easyversion_py/: __init__.py
src/easyversion_py/file/: store.py
src/easyversion_py/project/: __init__.py  version.py  workspace.py
tests/: conftest.py  test_file_store.py  test_project_version.py  test_project_workspace.py
