[project]
name = "easyversion_py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Wannes Vantorre", email = "vantorrewannes@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "cattrs>=25.3.0",
]

[project.scripts]
easyversion_py = "easyversion_py:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
