[project]
name = "easyversion"
version = "0.1.0"
description = "Minimal, fast folder snapshots. Save, list, and materialize versions into new folders. Non-destructive, content-addressed store."
readme = "README.md"
authors = [
    { name = "Wannes Vantorre", email = "vantorrewannes@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "cattrs>=25.3.0",
    "platformdirs>=4.5.1",
]

[project.scripts]
easyversion = "easyversion:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
    "pytest>=9.0.1",
]
